--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "picky-planner-packages",
-  "version": "1.0.4",
+  "name": "@hmshimanyula1995/picky-planner-packages",
+  "version": "1.0.6",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -11,7 +11,7 @@
     "url": "hmshimanyula1995/https://github.com/hmshimanyula1995/picky-planner-packages.git"
   },
   "publishConfig": {
-    "@hmshimanyula:registry": "https://npm.pkg.github.com"
+    "registry": "https://npm.pkg.github.com/"
   },
   "author": "infinityedge",
   "license": "ISC"
