--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -35,4 +35,4 @@ jobs:
       - run: npm ci
       - run: npm publish --access public
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
