--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hmshimanyula1995/picky-planner-packages",
-  "version": "1.0.7",
+  "version": "1.0.8",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "hmshimanyula1995/https://github.com/hmshimanyula1995/picky-planner-packages.git"
+    "url": "https://github.com/hmshimanyula1995/picky-planner-packages.git"
   },
   "author": "infinityedge",
   "license": "ISC"
