--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "@hmshimanyula1995/picky-planner-packages",
-  "version": "1.0.9",
+  "version": "1.0.10",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "test": "echo \"No tests yet\""
   },
-  "types": "types/index.d.ts",
   "repository": {
     "type": "git",
     "url": "https://github.com/hmshimanyula1995/picky-planner-packages.git"
